# six-trading

./: .gitignore  Cargo.toml  docker-compose.yml
migrations/: 20251228000000_init.sql  20251229000000_add_market_type.sql  20251229000001_add_trade_unique_idx.sql
src/: main.rs
src/database/: mod.rs  repository.rs
src/execution/: binance_worker.rs  futures_worker.rs  mod.rs
src/market_data/: backtest.rs  downloader.rs  filter.rs  mod.rs  websocket.rs
src/metrics/: mod.rs
src/state_machine/: mod.rs
src/strategy/: adaptive_mean_reversion.rs  bb_squeeze.rs  breakout_range.rs  buy_hold.rs  chaikin_money_flow.rs  dca_strategy.rs  donchian_channels.rs  factory.rs  fibonacci_reversion.rs  grid_trading.rs  heikin_ashi.rs  hull_ma.rs  ichimoku_cloud.rs  logger.rs  macd_crossover.rs  martingale.rs  mean_reversion.rs  mod.rs  momentum_breakout.rs  parabolic_sar.rs  risk.rs  rsi_strategy.rs  scalper_strategy.rs  stochastic_oscillator.rs  swing_trader.rs  trend_follower.rs  trix_strategy.rs  volatility_breakout.rs  vwap_strategy.rs
src/web/: backtest.html  dashboard.html  mod.rs
