[package]
name = "six-trading"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.8"
binance = "0.21.2"
chrono = "0.4.42"
dotenv = "0.15.0"
env_logger = "0.11.8"
hdrhistogram = "7.5.4"
log = "0.4.29"
parking_lot = "0.12.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
futures = "0.3.31"
lazy_static = "1.5.0"
